src/objects/Tickets__c.object
<CustomObject>
    <fields>
        <fullName>Backlog__c</fullName>
        <label>Backlog</label>
        <referenceTo>Backlog__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sort_order__c</fullName>
        <label>Sort order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Estimation</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Estimated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Story_Point__c</fullName>
        <label>Story Point</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Of_Ticket__c</fullName>
        <label>Type Of Ticket</label>
        <picklist>
            <picklistValues>
                <fullName>New Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Task</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Tickets</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tickets Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <recordTypes>
        <fullName>Change_request</fullName>
        <active>true</active>
        <label>Change request</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ChangedStatusEstimated</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL( Status__c ,&apos;Estimated&apos;) ,
  ISBLANK(Story_Point__c)  
)</errorConditionFormula>
        <errorMessage>If the status is Estimated you must have a story point.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoChangedEstimated</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
ISPICKVAL(Status__c,&apos;Estimated&apos;), 
ISPICKVAL(Status__c,&apos;Pending Demo&apos;),
ISPICKVAL(Status__c,&apos;Dev In Progress&apos;),
ISPICKVAL(Status__c,&apos;Pending QA&apos;),
ISPICKVAL(Status__c,&apos;QA In Progress&apos;)
),
ISCHANGED( Story_Point__c ) )</errorConditionFormula>
        <errorMessage>You can not update the story point, because it has been estimated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NochangedPoint</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Status__c, &apos;Done&apos;),
ISCHANGED(Story_Point__c)
)</errorConditionFormula>
        <errorMessage>You can not change the  Storie Point</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Permission_For_Team_Member_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Status__c ,&apos;Done&apos;),  $Profile.Name = &apos;TMember&apos;)</errorConditionFormula>
        <errorMessage>You can not update the status to done, because you have the necessary permission</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValuesPO</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR
(
 ISPICKVAL(Status__c, &apos;Dev In Progress&apos;),
ISPICKVAL(Status__c, &apos;Pending QA&apos;),
ISPICKVAL(Status__c, &apos;QA In Progress&apos;),
 ISPICKVAL(Status__c, &apos;Estimated&apos;)) , 
$Profile.Name = &apos;Product Owner&apos;)</errorConditionFormula>
        <errorMessage>You can only select the following states: 
Done,
Rejected,
Pending Demo
and Pending Estimation</errorMessage>
    </validationRules>
</CustomObject>